# ros2_robotiq_gripper_nw_arch

robotiq_description/meshes/visual/2f_85/: 2f_85_gripper.dae
robotiq_description/urdf/: robotiq_2f_140_macro.urdf.xacro  robotiq_2f_85_macro.urdf.xacro
robotiq_driver/: CMakeLists.txt
robotiq_driver/tests/: test_robotiq_gripper_hardware_interface.cpp
